--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "passport-local": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -39,6 +41,7 @@
     "css-loader": "^0.28.11",
     "node-sass": "^4.9.2",
     "redux": "^4.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
