--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
     "compression": "^1.7.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -31,6 +32,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.4.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
