--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.4.1",
     "react-calendar": "^2.16.1",
     "react-dom": "^16.4.1",
+    "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.4.0",
