--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.4.7",
     "reactstrap": "^6.4.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1"
@@ -49,7 +50,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "node-sass": "^4.9.2",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.5",
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.3",
@@ -58,5 +59,9 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3"
+  },
+  "nodemonConfig": {
+    "ignore": ["test/", "docs/", "client/"],
+    "delay": "2500"
   }
 }
