--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.4.1",
     "react-calendar": "^2.16.1",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.1",
     "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
@@ -61,7 +62,11 @@
     "webpack-hot-middleware": "^2.22.3"
   },
   "nodemonConfig": {
-    "ignore": ["test/", "docs/", "client/"],
+    "ignore": [
+      "test/",
+      "docs/",
+      "client/"
+    ],
     "delay": "2500"
   }
 }
