--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "react": "^16.4.1",
+    "react-bootstrap-typeahead": "^3.2.4",
     "react-calendar": "^2.16.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.1",
