Adding persistent session storage using connect-mongo

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.1.1",
     "compression": "^1.7.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
