--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Express Match",
   "main": "index.js",
   "scripts": {
-    "build": "nodemon server/server.js",
+    "build": "nodemon server/server.js &",
     "build-css": "node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --outputStyle expanded",
     "debug": "nodemon --inspect server/server.js",
     "prod": "node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
