--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "babylon": "^6.18.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "file-loader": "^4.2.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.5",
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
