Reset Password implementation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "ExpressMatch",
   "license": "UNLICENSED",
   "dependencies": {
+    "async": "^3.1.1",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
@@ -21,6 +22,8 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -28,6 +31,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.0",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
