--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "nodemon": "^1.18.5",
     "redux": "^4.0.0",
@@ -66,6 +67,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.41.6",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.3"
