--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-calendar": "^2.16.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.8.6",
+    "react-lazyload": "^2.6.5",
     "react-places-autocomplete": "^7.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.0.0",
