--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -47,7 +48,8 @@
     "react-spinners": "^0.4.7",
     "reactstrap": "^6.4.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
