Image Upload in Profile, fontawesome icons

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "async": "^3.1.1",
+    "aws-sdk": "^2.653.0",
     "axios": "^0.18.1",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
@@ -32,6 +33,7 @@
     "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
