--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nodemon server/server.js &",
     "build-css": "node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --outputStyle expanded",
     "debug": "nodemon --inspect server/server.js",
-    "prod": "node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
+    "prod:build": "node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
+    "prod": "npm run prod:build && node server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ExpressMatch",
