--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Express Match",
   "main": "index.js",
   "scripts": {
-    "dev": "pm2 start server/server.js &",
+    "dev": "NODE_ENV=development pm2 start server/server.js &",
     "build-css": "node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --outputStyle expanded",
-    "debug:dev": "pm2 start --inspect server/server.js",
+    "debug:dev": "pm2 start --inspect server/server.js &",
     "prod:build": "NODE_ENV=production node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
     "prod": "npm run prod:build && node server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
