--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
 DELAY=0
 
+#Server
+SESSION_SECRET=secret
+SESSION_STORE_SECRET=secret
+
+#DB
 DB_HOST=localhost
 DB_PORT=27017
+DB_NAME=db
 DB_USER=user
 DB_PASS=pass
 
