--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-css": "node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --outputStyle expanded",
     "debug:dev": "node --inspect server/server.js &",
     "prod:build": "node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
-    "prod": "npm run prod:build && pm2 server/prodServer.js &",
+    "prod": "npm run prod:build && pm2 start server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ExpressMatch",
@@ -66,7 +66,6 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
-    "nodemon": "^1.18.5",
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "sass-loader": "^7.0.3",
