--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "css-loader": "^0.28.11",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
