--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "expressmatch",
+  "name": "expresstomatch",
   "version": "1.0.0",
   "description": "Express To Match",
   "main": "index.js",
   "scripts": {
-    "dev": "pm2 start server/server.js &",
-    "build-css": "node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --outputStyle expanded",
+    "dev": "NODE_ENV=development npm run build-css && pm2 start server/server.js &",
+    "copy-assets": "rm -rf server/public/images && cp -r server/images server/public/images &",
+    "build-css": "rm -rf server/public/css && node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --output-style compressed &",
     "debug:dev": "node --inspect server/server.js &",
-    "prod:build": "node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production",
+    "prod:build": "npm run build-css && npm run copy-assets & node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production &",
     "prod": "NODE_ENV=production npm run prod:build && pm2 start server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "ExpressMatch",
+  "author": "ExpressToMatch",
   "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "async": "^3.1.1",
     "aws-sdk": "^2.653.0",
