--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.1.5",
     "async": "^3.1.1",
-    "aws-sdk": "^2.653.0",
-    "axios": "^0.18.1",
+    "aws-sdk": "^2.881.0",
+    "axios": "^0.21.1",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.0",
     "compression": "^1.7.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
@@ -30,27 +31,27 @@
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "helmet": "^3.21.2",
-    "moment": "^2.22.2",
-    "mongoose": "^5.9.1",
+    "express-session": "^1.17.1",
+    "helmet": "^3.23.3",
+    "moment": "^2.29.1",
+    "mongoose": "^5.12.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "nodemailer": "^6.4.2",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "react": "^16.8.6",
+    "react": "^16.14.0",
     "react-bootstrap-typeahead": "^3.2.4",
     "react-calendar": "^2.16.1",
-    "react-datepicker": "^2.0.0",
-    "react-dom": "^16.8.6",
-    "react-lazyload": "^2.6.5",
-    "react-places-autocomplete": "^7.2.0",
+    "react-datepicker": "^2.16.0",
+    "react-dom": "^16.14.0",
+    "react-lazyload": "^2.6.9",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^5.0.0",
-    "react-spinners": "^0.4.7",
+    "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.10.6",
     "reactstrap": "^6.4.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
@@ -75,10 +76,10 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^2.1.0",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
+    "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.22.3"
   },
   "nodemonConfig": {
