--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development npm run build-css && pm2 start server/server.js &",
     "copy-assets": "rm -rf server/public/images && cp -r server/images server/public/images &",
     "build-css": "rm -rf server/public/css && node_modules/node-sass/bin/node-sass --include-path server/scss server/scss/main.scss server/public/css/main.css --output-style compressed &",
-    "debug:dev": "NODE_ENV=development npm run build-css && node --inspect server/server.js &",
+    "debug:dev": "NODE_ENV=development npm run build-css && node --trace-deprecation --inspect server/server.js &",
     "prod:build": "npm run build-css && npm run copy-assets & node_modules/webpack/bin/webpack.js --config webpack.config.prod.js --mode production &",
     "prod": "NODE_ENV=production npm run prod:build && pm2 start server/prodServer.js &",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -39,7 +39,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2",
-    "passport": "^0.5.2",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
@@ -61,8 +61,8 @@
     "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.3",
+    "babel-core": "^4.7.16",
+    "babel-loader": "^9.1.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -72,10 +72,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
+    "node-sass": "^8.0.0",
     "redux": "^4.1.2",
     "redux-immutable-state-invariant": "^2.1.0",
-    "sass-loader": "^12.6.0",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.70.0",
